--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -122,7 +122,7 @@ footer {
 @media screen and (max-width: 600px) {
 
 .wrapper{
-		background-image:url(../img/iphone-size.jpg);
+		background-image:url(../img/iphone-version2.jpg);
 		/*width: 80%;*/
 		background-size: cover;
 		background-position:center;
