removed bg cover

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -124,7 +124,7 @@ footer {
 .wrapper{
 		background-image:url(../img/iphone-version2.jpg);
 		/*width: 80%;*/
-		background-size: cover;
+/* 		background-size: cover; */
 		background-position:center;
 		height: 3640px;
 	}
