removed first media query

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,7 +102,7 @@ footer {
 /*Media Queries
 ---------------------------------------*/
 
-@media screen and (min-width: 600px) {
+/* @media screen and (min-width: 600px) {
 
 	h1{
 		font-size: 30px;
@@ -116,7 +116,7 @@ footer {
 	nav ul li a{
 	padding: .5em 1em;	
 	}
-}
+} */
 	
 
 @media screen and (max-width: 600px) {
