--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,7 +53,7 @@ nav ul li {
 }
 
 nav ul li a {
-	padding: -.5em 5em;
+	padding: .5em 5em;
 	display: block;
 	text-align: center;
 	width: 100%;
@@ -102,7 +102,7 @@ footer {
 /*Media Queries
 ---------------------------------------*/
 
- @media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) {
 
 	h1{
 		font-size: 30px;
@@ -116,17 +116,17 @@ footer {
 	nav ul li a{
 	padding: .5em 1em;	
 	}
-} 
+}
 	
 
 @media screen and (max-width: 600px) {
 
 .wrapper{
 		background-image:url(../img/iphone-version2.jpg);
-		padding: 0em !important;
+		/*padding: 0 !important;*/
 		background-size: cover;
 		background-position:center;
-		height: 3519px;
+		height: 2815px;
 	}
 .container{
 		display: none;
