added ipad media query

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -138,5 +138,24 @@ nav ul li{
 nav{
 	display: none !important;
 }
-
 }
+@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
+  .wrapper{
+		background-image:url(../img/ipad-version.jpg);
+		/*padding: 0 !important;*/
+		background-size: cover;
+		background-position:center;
+		height: 2815px;
+	}
+.container{
+		display: none;
+}
+
+nav ul li{
+	display: none;
+}
+nav{
+	display: none !important;
+}
+}
+
